[package]
name = "pmv-cli"
description = "Command line interface client for PersonalMediaVault"
version = "1.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.3", features = ["derive"] }
hyper = { version = "0.14.26", features = ["full"] }
hyper-multipart-rfc7578 = "0.8.0"
hyper-tls = "0.5.0"
rpassword = "7.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
term_size = "0.3.2"
tokio = { version = "1.28.2", features = ["full"] }
unicode-width = "0.1.10"
url = "2.4.0"
urlencoding = "2.1.2"
